fix button spacing

--- a/trinity/static/trinity/styles.css
+++ b/trinity/static/trinity/styles.css
@@ -1,17 +1,16 @@
 
 th {
-   text-align: center;
-    
+    text-align: center;
 }
 
 td.center {
     text-align: center;
-    
 }
 
 body {
     padding-bottom: 100px;
 }
+
 .dare-rating-box {
     position: fixed;
     bottom: 10px;
@@ -25,6 +24,12 @@ body {
     background: #f2f6f5;
 
 }
+
+.add-button{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 .banner {
     background-size: cover;
     height: 200px;
@@ -45,6 +50,7 @@ body {
     body {
         font-size: 0.875rem;
     }
+
     h1 {
         font-size: 1.5rem;
     }
